--- a/index.html
+++ b/index.html
@@ -1,152 +1,157 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="description" content="Erleben Sie spannende Sportwetten mit echtem Geld und die besten Promotionen bei Bwin. Ihre Plattform für unkomplizierte Sportwetten.">
-        <link rel="canonical" href="https://promo.bwin.de/de/promo/offers/p/slots">
-        <meta name="keywords" content="Bwin, Sportwetten, echtes Geld, Sport Promotionen, einfache Sportwetten">
-        <title>Bwin | Aktionen | Sportwetten mit echtem Geld leicht gemacht</title>
-        <link rel="shortcut icon" href="images/fav-icon.png" type="image/x-icon">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/responsive.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <div class="Home">
-            <div class="container">
-                <div class="HomeFlex">
-                    <div class="Home_img">
-                        <a href="/">
-                            <img src="images/bwin-logo.svg">
-                        </a>
-                    </div>
-                    <div class="Home_btn">
-                        <a href="regestration.html">
-                            <button type="button">Registrieren</button>
-                        </a>
-                        <a href="login.html">
-                            <button id="loginButton" type="button" class="button-primary-green login-menu__login js-login-open log">Anmelden</button>
-                        </a>
-                    </div>
-                </div>
-            </div>
 
-        </div>
-        <div class="Content">
-            <div class="container">
-                <div class="ContentArea">
-                    <div class="content-text">
-                        <h1>Aktionen</h1>
-                        <p>Einfache Möglichkeit für echtes Geld und Sportwetten</p>
-                    </div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Erleben Sie spannende Sportwetten mit echtem Geld und die besten Promotionen bei Bwin. Ihre Plattform für unkomplizierte Sportwetten.">
+    <link rel="canonical" href="https://promo.bwin.de/de/promo/offers/p/slots">
+    <meta name="keywords" content="Bwin, Sportwetten, echtes Geld, Sport Promotionen, einfache Sportwetten">
+    <title>Bwin | Aktionen | Sportwetten mit echtem Geld leicht gemacht</title>
+    <link rel="shortcut icon" href="images/fav-icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <div class="disclaimer">
+        <p><img src="images/no-one-under-eighteen-symbol-warn.png"> **Nur für Erwachsene** | Zutritt ab 18 Jahren. Spielen Sie verantwortungsbewusst. Hilfe? BeGambleAware.org | Hotline: 0808 8020 133.</p>
+    </div>
+    <div class="Home">
+        <div class="container">
+            <div class="HomeFlex">
+                <div class="Home_img">
+                    <a href="/">
+                        <img src="images/bwin-logo.svg">
+                    </a>
+                </div>
+                <div class="Home_btn">
+                    <a href="regestration.html">
+                        <button type="button">Registrieren</button>
+                    </a>
+                    <a href="login.html">
+                        <button id="loginButton" type="button" class="button-primary-green login-menu__login js-login-open log">Anmelden</button>
+                    </a>
                 </div>
             </div>
         </div>
-        <div class="bonus-offer-section">
-            <div class="container">
-                <div class="card-container">
-                    <div class="card-b-offer">
-                        <div>
-                            <img src="images/bonus-01.png" alt="Exklusiver Bonus" class="card-image">
-                            <div class="overlay">
-                                <h3>Deine einzigartigen Belohnungen</h3>
-                                <p>Setze €30 und erhalte 20 FreeSpins als Belohnung</p>
-                            </div>
-                        </div>
-                        <div class="card-content">
-                            <h4>Erhöhe deinen ersten Gewinn</h4>
-                            <p>18+. Es gelten die AGB. Spiele verantwortungsvoll.</p>
-                            <a href="#">
-                                <button class="btn">JETZT SPIELEN</button>
-                            </a>
-                        </div>
-                    </div>
-                    
-                    <div class="card-b-offer">
-                        <div>
-                            <img src="images/bonus-02.png" alt="Spezialbonus" class="card-image">
-                            <div class="overlay">
-                                <h3>Einzigartige Vorteile warten auf dich</h3>
-                                <p>Erhalte 50% Bonus bei einer Einzahlung von €50</p>
-                            </div>
-                        </div>
-                        <div class="card-content">
-                            <h4>Gewinne mit jedem Einsatz</h4>
-                            <p>18+. Es gelten die AGB. Spiele verantwortungsvoll.</p>
-                            <a href="#">
-                                <button class="btn">JETZT SPIELEN</button>
-                            </a>
-                        </div>
-                    </div>
-                    
-                    <div class="card-b-offer">
-                        <div>
-                            <img src="images/bonus-03.png" alt="VIP-Belohnungen" class="card-image">
-                            <div class="overlay">
-                                <h3>VIP-Vorteile exklusiv für dich</h3>
-                                <p>Erreiche VIP-Status und genieße personalisierte Angebote</p>
-                            </div>
-                        </div>
-                        <div class="card-content">
-                            <h4>Werde Mitglied im VIP-Club</h4>
-                            <p>18+. Es gelten die AGB. Spiele verantwortungsvoll.</p>
-                            <a href="#">
-                                <button class="btn">JETZT SPIELEN</button>
-                            </a>
-                        </div>
-                    </div>
+    </div>
+    <div class="Content">
+        <div class="container">
+            <div class="ContentArea">
+                <div class="content-text">
+                    <h1>Aktionen</h1>
+                    <p>Einfache Möglichkeit für echtes Geld und Sportwetten</p>
                 </div>
-            </div>   
+            </div>
         </div>
-        <div class="footer">
-            <div class="container">
-                <div class="footer-links">
-                    <ul>
-                        <li>
-                            <a href="index.html">Startseite</a>
-                        </li>
-                        <li>
-                            <a href="privacy-policy.html">Datenschutzerklärung</a>
-                        </li>
-                        <li>
-                            <a href="terms.html">Allgemeine Geschäftsbedingungen</a>
-                        </li>
-                        <li>
-                            <a href="cookie-policy.html">Cookie-Richtlinie</a>
-                        </li>
-                    </ul>
+    </div>
+    <div class="bonus-offer-section">
+        <div class="container">
+            <div class="card-container">
+                <div class="card-b-offer">
+                    <div>
+                        <img src="images/bonus-01.png" alt="Exklusiver Bonus" class="card-image">
+                        <div class="overlay">
+                            <h3>Deine einzigartigen Belohnungen</h3>
+                            <p>Setze €30 und erhalte 20 FreeSpins als Belohnung</p>
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        <h4>Erhöhe deinen ersten Gewinn</h4>
+                        <a href="#">
+                            <button class="btn">JETZT SPIELEN</button>
+                        </a>
+                    </div>
                 </div>
 
-                <p class="footer-p-a">Diese Website wird betrieben von bwin (Deutschland) Limited - C92801 - Unit 6, St. Business Centre, 120 The Strand, Gzira, Malta.<br> 
-                    bwin (Deutschland) Limited ist lizenziert und wird von der Gemeinsamen Glücksspielbehörde der Länder (GGL) überwacht und reguliert.</p>
+                <div class="card-b-offer">
+                    <div>
+                        <img src="images/bonus-02.png" alt="Spezialbonus" class="card-image">
+                        <div class="overlay">
+                            <h3>Einzigartige Vorteile warten auf dich</h3>
+                            <p>Erhalte 50% Bonus bei einer Einzahlung <br> von €50</p>
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        <h4>Gewinne mit jedem Einsatz</h4>
+                        <a href="#">
+                            <button class="btn">JETZT SPIELEN</button>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="card-b-offer">
+                    <div>
+                        <img src="images/bonus-03.png" alt="VIP-Belohnungen" class="card-image">
+                        <div class="overlay">
+                            <h3>VIP-Vorteile exklusiv für dich</h3>
+                            <p>Erreiche VIP-Status und genieße personalisierte Angebote</p>
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        <h4>Werde Mitglied im VIP-Club</h4>
+                        <a href="#">
+                            <button class="btn">JETZT SPIELEN</button>
+                        </a>
+                    </div>
+                </div>
             </div>
-            <div class="contact-social">
+        </div>
+    </div>
+    <div class="footer">
+        <div class="container">
+            <div class="footer-links">
                 <ul>
                     <li>
-                        <a><img src="images/no-under-eighteenbwin.jpg" alt="Avertissement général" class="f-2"></a>
+                        <a href="index.html">Startseite</a>
                     </li>
                     <li>
-                        <a href="https://www.gluecksspiel-behoerde.de/de/erlaubnisfaehigesgluecksspiel/whitelist"><img src="images/bwin-ggl-logo.webp" alt="Logo de l'ANJ (Autorité Nationale des Jeux)"  class="f-5"></a>
+                        <a href="privacy-policy.html">Datenschutzerklärung</a>
                     </li>
                     <li>
-                        <a href="https://www.egba.eu/"><img src="images/bwin-egba-brand-logo-gambling.webp" alt="Logo de GamCare" class="f-1"></a>
+                        <a href="terms.html">Allgemeine Geschäftsbedingungen</a>
                     </li>
                     <li>
-                        <a href="https://ibia.bet/"><img src="images/bwin-i-gam.webp" alt="Logo de BeGambleAware" class="f-4"></a>
+                        <a href="cookie-policy.html">Cookie-Richtlinie</a>
                     </li>
                 </ul>
             </div>
-            <div class="container text-center">
-                <p class="footer-copyright">
-                    © 2024 Bwin. All Rights Reserved
-                </p>
-            </div>
+
+            <p class="footer-p-a">Diese Website wird betrieben von bwin (Deutschland) Limited - C92801 - Unit 6, St. Business Centre, 120 The Strand, Gzira, Malta.
+                <br> bwin (Deutschland) Limited ist lizenziert und wird von der Gemeinsamen Glücksspielbehörde der Länder (GGL) überwacht und reguliert.</p>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-        <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    </body>
+        <div class="contact-social">
+            <ul>
+                <li>
+                    <a><img src="images/no-under-eighteenbwin.jpg" class="f-2"></a>
+                </li>
+                <li>
+                    <a href="https://www.playsponsible.at/"><img src="images/play.png" class="f-5"></a>
+                </li>
+                <li>
+                    <a href="https://www.oswv.at/"><img src="images/OSWV_Logo_Square.png" class="f-6"></a>
+                </li>
+                <li>
+                    <a href="https://www.egba.eu/"><img src="images/bwin-egba-brand-logo-gambling.webp" class="f-1"></a>
+                </li>
+                <li>
+                    <a href="https://ibia.bet/"><img src="images/bwin-i-gam.webp" class="f-4"></a>
+                </li>
+            </ul>
+        </div>
+        <div class="container text-center">
+            <p class="footer-copyright">
+                © 2024 Bwin. All Rights Reserved
+            </p>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+</body>
+
 </html>
